1.12_01 2006-03-31

- Reverted changes from 1.07_90 that attempted to extend range of
allowable epoch values around edge cases. It turns out that this was
causing integer overflows 

- In one error case, the module could warn and then croak. I changed
it to simply croak with the whole message. Based on a patch by Michael
Schwern from rt.perl.org #36268.


1.12    2005-12-18

- Explicitly turn off negative epoch testing on VMS.  Change #24310
from bleadperl, Craig Berry.

- In the test suite when checking on whether negative epochs are
allowed, use 3 days before the epoch as a test, because just one hour
before may give false positives (for example on Win32 with the Borland
compiler).

- Reverted an earlier change that slightly extended the range of
values for which timelocal worked (by about a day in either direction)
because it could cause an incorrect answer for certain epoch values on
the date of a DST change.  Reported by Gisle Aas.


1.11    2005-02-09

- Try to make detection of supported epoch range a little smarter.
The detection was allowing negative epochs on Win32 but apparently
this doesn't work, and trying to pass a pre-epoch date in just causes
a lot of warnings.  This silences warnings during the tests on
windows.


1.10    2004-04-20

- Fix compilation failure with older Test.pm (including the versions
shipped with 5.6.1 and earlier perls).  Ticket #6079 on rt.cpan.org.
Patch by somebody who didn't give their name on rt.cpan.org ;)


1.09    2004-04-07

- Fixed a bug in the test suite that led to timegm not getting tested
properly, and timelocal getting tested twice for the same values.


1.08    2004-04-07

- Changed occurences of "UTC" to "GMT" in order to agree with POSIX,
which defines the epoch in terms of GMT.

- Documented the behavior of timelocal() when given a local time that
does not exist (due to a DST change).  Suggested by Nick Ing-Simmons.

- Don't expect edge case tests to pass on AIX 4.3, since the OS is